--- a/src/pages/Homepage/components/Banner/Banner.css
+++ b/src/pages/Homepage/components/Banner/Banner.css
@@ -1,57 +1,57 @@
 .banner {
-    height: 50vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+  height: 56vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.banner:before {
+  content: "";
+  background: linear-gradient(to right, black, transparent);
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 56vh;
+  width: 100%;
+  border-bottom: 1px solid white;
+}
+
+.banner-text-area {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 2rem;
+}
+
+.banner-text-area > * {
+  z-index: 2;
+}
+
+.banner-text-area h1 {
+  font-size: 3rem;
+}
+.banner-text-area p {
+  font-size: 1.2rem;
+  margin-top: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .banner {
+    height: 45vh;
   }
-  
   .banner:before {
-    content: "";
-    background: linear-gradient(to top, black, transparent);
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 50vh;
-    width: 100%;
-    border-bottom: 1px solid white;
+    height: 45vh;
   }
-  
   .banner-text-area {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    padding: 2rem;
+    width: 100%;
   }
-  
-  .banner-text-area > * {
-    z-index: 2;
-  }
-  
   .banner-text-area h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
   .banner-text-area p {
-    font-size: 1.2rem;
-    margin-top: 20px;
+    font-size: 1rem;
   }
-  
-  @media screen and (max-width: 768px) {
-    .banner {
-      height: 40vh;
-    }
-    .banner:before {
-      height: 40vh;
-    }
-    .banner-text-area {
-      width: 100%;
-    }
-    .banner-text-area h1 {
-      font-size: 2.5rem;
-    }
-    .banner-text-area p {
-      font-size: 1rem;
-    }
-  }
-  
+}
