--- a/src/pages/Homepage/components/MovieCard/MovieCard.css
+++ b/src/pages/Homepage/components/MovieCard/MovieCard.css
@@ -1,37 +1,61 @@
 .movie-card {
-    width: 220px;
-    height: 330px;
-    background-size: cover;
-    cursor: pointer;
-    transition: 0.5s;
-  }
-  
-  .movie-card:hover {
-    transform: scale(1.3) translateZ(20px);
-    z-index: 2;
-  }
-  
-  .overlay {
-    padding: 5px;
-    width: 100%;
-    height: 100%;
-    background: rgba(43, 41, 41, 0.9);
-    opacity: 0;
-    transition: all 1s;
-    color: white;
-    font-weight: bold;
-    overflow-wrap: break-word;
+  width: 220px;
+  height: 330px;
+  /* width:100%;
+  height:100%; */
+  background-size: cover;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.movie-card:hover {
+  transform: scale(1.3) translateZ(20px);
+  z-index: 2;
+}
+
+.overlay {
+  padding: 5px;
+  width: 100%;
+  height: 100%;
+  background: rgba(43, 41, 41, 0.9);
+  opacity: 0;
+  transition: all 1s;
+  color: white;
+  font-weight: bold;
+  overflow-wrap: break-word;
+}
+.overlay > * {
+  margin: 7px;
+}
+.ageBadge {
+  margin-right: 3px;
+}
+.overlay div {
+  margin-top: 2px;
+}
+.overlay p {
+  margin-top: 30px;
+}
+.overlay:hover {
+  opacity: 1;
+}
+
+@media screen and (max-width: 600px) {
+  .movie-card {
+    width: 130px;
+    height: 195px;
   }
   .overlay > * {
-    margin: 7px;
+    margin: 6px;
+  }
+  .overlay h3 {
+    font-size: 18px;
   }
   .overlay div {
-    margin-top: 2px;
+    font-size: 10px;
+    margin-top: 0px;
   }
-  .overlay p {
-    margin-top: 30px;
+  .overlay .ageBadge {
+    display: none;
   }
-  .overlay:hover {
-    opacity: 1;
-  }
-  
+}
