--- a/src/common/MovieCard/MovieCard.css
+++ b/src/common/MovieCard/MovieCard.css
@@ -1,16 +1,14 @@
 .movie-card {
   width: 220px;
   height: 330px;
-  /* width:100%;
-  height:100%; */
   background-size: cover;
   cursor: pointer;
   transition: 0.5s;
 }
 
 .movie-card:hover {
-  transform: scale(1.3) translateZ(20px);
-  z-index: 2;
+  transform: scale(1.1) translateZ(1px);
+  z-index: 1;
 }
 
 .overlay {
@@ -40,7 +38,7 @@
   opacity: 1;
 }
 
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   .movie-card {
     width: 130px;
     height: 195px;
@@ -58,4 +56,4 @@
   .overlay .ageBadge {
     display: none;
   }
-}
+} */
