--- a/src/common/MovieCard/MovieCard.css
+++ b/src/common/MovieCard/MovieCard.css
@@ -12,7 +12,11 @@
 }
 
 .overlay {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 5px;
+  padding-top: 40px;
   width: 100%;
   height: 100%;
   background: rgba(43, 41, 41, 0.9);
