--- a/src/pages/Movies/MoviePage.css
+++ b/src/pages/Movies/MoviePage.css
@@ -14,3 +14,14 @@
   justify-content: center;
   margin: 60px 0;
 }
+
+.checkbox-container {
+  display: inline-block;
+  margin: 10px;
+  font-size: 1.5rem;
+}
+.checkbox {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+}
