design: 모바일 버전 제작

--- a/src/common/MovieCard/MovieCard.css
+++ b/src/common/MovieCard/MovieCard.css
@@ -1,6 +1,7 @@
 .movie-card {
   width: 220px;
   height: 330px;
+  /* height: 100%; */
   background-size: cover;
   cursor: pointer;
   transition: 0.5s;
@@ -42,10 +43,10 @@
   opacity: 1;
 }
 
-/* @media screen and (max-width: 600px) {
+@media screen and (max-width: 850px) {
   .movie-card {
-    width: 130px;
-    height: 195px;
+    width: 200px;
+    height: 300px;
   }
   .overlay > * {
     margin: 6px;
@@ -54,10 +55,7 @@
     font-size: 18px;
   }
   .overlay div {
-    font-size: 10px;
-    margin-top: 0px;
+    font-size: 16px;
+    margin-top: 10px;
   }
-  .overlay .ageBadge {
-    display: none;
-  }
-} */
+}
