--- a/src/common/MovieSlider/MovieSlider.css
+++ b/src/common/MovieSlider/MovieSlider.css
@@ -7,7 +7,7 @@ h2 {
 }
 @media (max-width: 600px) {
   .carousel-container {
-    height: 330px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
   }
