--- a/src/pages/Homepage/components/Banner/Banner.css
+++ b/src/pages/Homepage/components/Banner/Banner.css
@@ -39,20 +39,39 @@
   margin-top: 20px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .banner {
-    height: 45vh;
+    height: 40vh;
   }
   .banner:before {
-    height: 45vh;
+    height: 40vh;
+  }
+  .banner-text-area {
+    width: 80%;
+  }
+  .banner-text-area h1 {
+    font-size: 2rem;
+  }
+  .banner-text-area p {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .banner {
+    height: 35vh;
+  }
+  .banner:before {
+    height: 35vh;
   }
   .banner-text-area {
     width: 100%;
   }
   .banner-text-area h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
   .banner-text-area p {
-    font-size: 1rem;
+    font-size: 0.8rem;
+    margin-top: 10px;
   }
 }
