feat: 영화 디테일 화면 추가

--- a/src/pages/MovieDetail/MovieDetail.css
+++ b/src/pages/MovieDetail/MovieDetail.css
@@ -28,3 +28,9 @@
   margin-top: 18px;
   margin-right: 10px;
 }
+
+@media screen and (max-width: 768px) {
+  .movie-detail-img {
+    width: 400px;
+  }
+}
