--- a/src/pages/MovieDetail/components/MovieReview.css
+++ b/src/pages/MovieDetail/components/MovieReview.css
@@ -10,7 +10,7 @@
 .review {
   width: 100%;
   padding: 20px;
-  border: 1px solid white;
+  border: 1px solid red;
   margin: 10px;
   border-radius: 10px;
   height: 200px;
@@ -24,4 +24,18 @@
   background-color: white;
   color: black;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .review-container {
+    display: flex;
+    justify-self: center;
+    align-items: center;
+  }
+  .review {
+    width: 90%;
+    padding: 5px;
+    border: 1px solid red;
+    height: 400px;
+  }
 }
